Refactor y mejoras en PantallaCliente
- Validación de IP: Ahora solo permite formatos IPv4 o 'localhost' con aviso de error en rojo.
- Instancia única: Implementación de FileLock para evitar que el programa se abra varias veces.
- Compatibilidad: Cambio de List.of por Arrays.asList para soporte de Java 8.
- Preparación para Launch4j: Ajustes en el lanzador principal.